# SpinAPI_linux

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.txt
examples/: CMakeLists.txt  a.out  felix_test.c  out  pflag_test.c
examples/General/: .pb_read_firmware.c.swp  pb_debug  pb_debug.c  pb_read_firmware  pb_read_firmware.c  pb_start  pb_start.c  pb_stop  pb_stop.c
examples/PulseBlaster-QuadCore/: pb_quadcore250_example1  pb_quadcore250_example1.c  pb_quadcore250_example2  pb_quadcore250_example2.c  pb_quadcore250_example3  pb_quadcore250_example3.c  pb_quadcore250_example4  pb_quadcore250_example4.c  pb_quadcore500_example1  pb_quadcore500_example1.c  pb_quadcore500_example2  pb_quadcore500_example2.c  pb_quadcore500_example3  pb_quadcore500_example3.c
examples/PulseBlaster24/: pb24_ex1  pb24_ex1.c  pb24_ex2  pb24_ex2.c  pb24_ex3  pb24_ex3.c  pb24_ex4  pb24_ex4.c  pb24_mem_depth_test  pb24_mem_depth_test.c  pb24_programmable_clock  pb24_programmable_clock.c  pb24_two_boards  pb24_two_boards.c
examples/PulseBlasterDDS-I/: pbdds_i_300_amplitude_sweep  pbdds_i_300_amplitude_sweep.c  pbdds_i_300_awg  pbdds_i_300_awg.c  pbdds_i_300_awg_ramp  pbdds_i_300_awg_ramp.c  pbdds_i_300_bipolar_square_wave  pbdds_i_300_bipolar_square_wave.c  pbdds_i_300_cont  pbdds_i_300_cont.c  pbdds_i_300_excite_test  pbdds_i_300_excite_test.c  pbdds_i_300_frequency_sweep  pbdds_i_300_frequency_sweep.c  pbdds_i_300_phase_test  pbdds_i_300_phase_test.c
examples/PulseBlasterDDS-II/: pbdds2_TTL_only  pbdds2_TTL_only.c  pbdds2_TTLflag_default  pbdds2_TTLflag_default.c  pbdds2_awg  pbdds2_awg.c  pbdds2_excite_test  pbdds2_excite_test.c  pbdds2_load_shape_ram  pbdds2_load_shape_ram.c  pbdds2_startAddress_default  pbdds2_startAddress_default.c
examples/PulseBlasterDDS-III/: CMakeLists.txt  pbdds3_ex1  pbdds3_ex1.c  pbdds3_ex2  pbdds3_ex2.c
examples/PulseBlasterESR/: pbesr_long_delay_test  pbesr_long_delay_test.c  pbesr_loop_test  pbesr_loop_test.c  pbesr_manual_example  pbesr_manual_example.c  pbesr_sub_test  pbesr_sub_test.c
examples/PulseBlasterESR-PRO/: pbesr_pro_example1  pbesr_pro_example1.c  pbesr_pro_long_delay_test  pbesr_pro_long_delay_test.c  pbesr_pro_loop_test  pbesr_pro_loop_test.c  pbesr_pro_shortpulse_disable  pbesr_pro_shortpulse_disable.c  pbesr_pro_start_address  pbesr_pro_start_address.c  pbesr_pro_subtest  pbesr_pro_subtest.c
examples/PulseBlasterESR-PRO-II/: pbesr_pro_ii_example1  pbesr_pro_ii_example1.c  pbesr_pro_ii_example2  pbesr_pro_ii_example2.c  pbesr_pro_ii_example3  pbesr_pro_ii_example3.c  pbesr_pro_ii_example4  pbesr_pro_ii_example4.c  pbesr_pro_ii_example5  pbesr_pro_ii_example5.c  pbesr_pro_ii_reset  pbesr_pro_ii_reset.c  pbesr_pro_ii_trigger  pbesr_pro_ii_trigger.c
examples/RadioProcessor/: CYCLOPS_nmr  CYCLOPS_nmr.c  CYCLOPS_nmr.h  DirectCapture  DirectCapture.c  awg  awg.c  excite_test  excite_test.c  singlepulse_nmr  singlepulse_nmr.c  singlepulse_nmr.h
examples/Shared/: spinapi_examples_common.h
examples/USB-PTS/: CMakeLists.txt  pts_fsweep.c  usb-pts_ex_160  usb-pts_ex_160.c  usb-pts_ex_250  usb-pts_ex_250.c  usb-pts_ex_300  usb-pts_ex_300.c  usb-pts_ex_3200  usb-pts_ex_3200.c  usb-pts_ex_500  usb-pts_ex_500.c
examples/USB-PTS/includes/: CMakeLists.txt  incl_160  incl_160.c  incl_250  incl_250.c  incl_300  incl_300.c  incl_3200  incl_3200.c  incl_500  incl_500.c  incl_fsweep_once_160  incl_fsweep_once_160.c  incl_fsweep_once_250  incl_fsweep_once_250.c  incl_fsweep_once_300  incl_fsweep_once_300.c  incl_fsweep_once_3200  incl_fsweep_once_3200.c  incl_fsweep_once_500  incl_fsweep_once_500.c
include/: dds.h
interpreter/: CMakeLists.txt  spbicl
interpreter/src/: interpreter.cpp
interpreter/src/rc/: resources.rc
myexample/: CMakeLists.txt
myexample/lib/: spinapi.c
myexample/src/: pb24_ex1.c
src/: .debug.c.swp  CMakeLists.txt  Doxyfile  License.txt  README.txt  caps.c  caps.h  debug.c  debug.h  driver-direct-linux.c  driver-os.h  driver-stub.c  driver-usb-linux.c  driver-usb-stub.c  driver-usb-windows.c  driver-usb.h  fid.h  if.c  if.h  io.c  io.h  io_os.h  spinapi.c  spinapi.h  tags  usb.c  usb.h  usb_endpoints.h  util.c  util.h  utils_linux.c  utils_linux.h  version.h
