cmake_minimum_required(VERSION 3.6)

project(spinapi-build)

set(ARCHITECTURE "x64" CACHE STRING "Platform architecture")

include_directories(src)

if(WIN32)
  add_definitions(-D__WINDOWS__)
  if(${ARCHITECTURE} STREQUAL "x64") 
    link_directories(src/ftd2xx/Windows/amd64)
  else()
    link_directories(src/ftd2xx/Windows/i386)
  endif()
elseif(UNIX AND NOT APPLE)
  set(LINUX TRUE)
  add_definitions(-D__LINUX__)
  if(${ARCHITECTURE} STREQUAL "x64") 
    link_directories(src/ftd2xx/Linux/amd64)
  else()
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
    link_directories(src/ftd2xx/Linux/i386)
  endif()
endif()

set(COMPILE_GENERAL    ON CACHE BOOL "Compile general example programs.")
set(COMPILE_PB24       ON CACHE BOOL "Compile PulseBlaster24 example programs.")
set(COMPILE_PBDDSI     ON CACHE BOOL "Compile PulseBlasterDDS-I example programs.")
set(COMPILE_PBDDSII    ON CACHE BOOL "Compile PulseBlasterDDS-II example programs.")
set(COMPILE_PBDDSIII   ON CACHE BOOL "Compile PulseBlasterDDS-III example programs.")
set(COMPILE_PBESR      ON CACHE BOOL "Compile PulseBlasterESR example programs.")
set(COMPILE_PBESRPRO   ON CACHE BOOL "Compile PulseBlasterESR-PRO example programs.")
set(COMPILE_PBESRPROII ON CACHE BOOL "Compile PulseBlasterESR-PRO-II example programs.")
set(COMPILE_PBQUAD     ON CACHE BOOL "Compile PulseBlaster QuadCore example programs.")
set(COMPILE_RP         ON CACHE BOOL "Compile RadioProcessor example programs.")
set(COMPILE_PTS        ON CACHE BOOL "Compile PTS example programs.")

if(WIN32)
  add_subdirectory(windriver-secret)
endif()
add_subdirectory(src)
add_subdirectory(examples)
add_subdirectory(interpreter)

install(FILES CHANGELOG.md CMakeLists.txt DESTINATION .)
if(WIN32)
  install(FILES README.txt DESTINATION .)
elseif(UNIX AND NOT APPLE)
  install(FILES README.linux DESTINATION . RENAME README.txt)
endif()
install(DIRECTORY examples DESTINATION .)

